tests/baselines/reference/invalidModuleWithVarStatements.errors.txt
invalidModuleWithVarStatements.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
invalidModuleWithVarStatements.ts(4,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithVarStatements.ts(7,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
invalidModuleWithVarStatements.ts(8,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithVarStatements.ts(11,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
invalidModuleWithVarStatements.ts(12,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
invalidModuleWithVarStatements.ts(15,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
invalidModuleWithVarStatements.ts(16,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
invalidModuleWithVarStatements.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
invalidModuleWithVarStatements.ts(20,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
invalidModuleWithVarStatements.ts(24,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
invalidModuleWithVarStatements.ts(25,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.


==== invalidModuleWithVarStatements.ts (12 errors) ====
    // All of these should be an error
    
    module Y {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        public var x: number = 0;
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    }
    
    module Y2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        public function fn(x: string) { }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    }
    
    module Y4 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        static var x: number = 0;
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    }
    
    module YY {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        static function fn(x: string) { }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    }
    
    module YY2 {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        private var x: number = 0;
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
    }
    
    
    module YY3 {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        private function fn(x: string) { }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
    }
    